--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-8">
           <h1>SKEZZO - New Style of Mobility</h1>
-          <h2>We are team of engineers making something out of nothing.</h2>
+          <h2>We are team of engineers, embersed in to make something out of nothing.</h2>
           <a href="#about" class=" play-btn mb-4"></a>
         </div>
       </div>
