--- a/index.html
+++ b/index.html
@@ -358,6 +358,9 @@
       <div class="copyright">
         &copy; Copyright <strong><span>SKEZZO</span></strong>. All Rights Reserved
       </div>
+      <div class="credit">
+        Design by <a href="/">Aryan Sharma</a>
+      </div>
     </div>
   </footer><!-- End Footer -->
 
