--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
               <div class="address" style="display:inline-block;width:30%;min-width:300px">
                 <i class="ri-map-pin-line"></i>
                 <h4>Location:</h4>
-                <p>-</p>
+                <p> Chandigarh University, Mohali, Punjab - 140413</p>
               </div>
 
               <div class="email" style="display:inline-block;width:30%;min-width:300px">
@@ -359,7 +359,7 @@
         &copy; Copyright <strong><span>SKEZZO</span></strong>. All Rights Reserved
       </div>
       <div class="credit">
-        Design by <a href="/">Aryan Sharma</a>
+        Design by <a href="/">Team Skezzo</a>
       </div>
     </div>
   </footer><!-- End Footer -->
