--- a/index.html
+++ b/index.html
@@ -76,27 +76,20 @@
 
         <div class="section-title">
           <h2>About Us</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p style="color:black"><b>SKEZZO</b>, founded in 2022 is the first company all over worldwide which gives you Scan, Pay and Use feature for the electric skateboards.</p>
         </div>
 
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              What makes SKEZZO different??
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+              <li><i class="ri-check-double-line"></i> We are the first company which provides <b> Electric Skateboards with Scan, Pay and Use feature.</b></li>
+              <li><i class="ri-check-double-line"></i> We made SKEZZO boards more easy, cheap and joyful for everyone.</li>
+              <li><i class="ri-check-double-line"></i> Our team of engineers are giving their best and making SKEZZO boards best out of all.</li>
             </ul>
-          </div>
-          <div class="col-lg-6 pt-4 pt-lg-0">
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
-            </p>
+            
             <a href="#" class="btn-learn-more">Learn More</a>
           </div>
         </div>
