--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <div class="section-title">
           <h2>About Us</h2>
-          <p style="color:black"><b>SKEZZO</b>, founded in 2022 is the first company all over worldwide which gives you Scan, Pay and Use feature for the electric skateboards.</p>
+          <p style="color:black"><b>SKEZZO</b>, founded in 2022 is the first company all over worldwide which gives you Scan, Pay and Use feature for the electric skateboards. Moreover, SKEZZO boards are<b> All-Terrain boards</b>. </p>
         </div>
 
         <div class="row content">
@@ -111,7 +111,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
               <h4><a href="">Maintainance</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <p>SKEZZO is famous for its Maintainance. We give world class Maintainance till the warranty time period.</p>
             </div>
           </div>
 
@@ -119,15 +119,15 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4><a href="">Warranty</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <p>Every SKEZZO product comes with minimum 6 months warranty with it.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">Delivery</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <h4><a href="">Shipping</a></h4>
+              <p> SKEZZO gives free no cost shipping for every delivery. </p>
             </div>
           </div>
 
@@ -145,7 +145,7 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-start">
             <h3>Call To Action</h3>
-            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p> Our customer Support gives 24x7 service for every customer ,so, that your doubt can be resolved within few minutes </p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="#">Call To Action</a>
@@ -246,8 +246,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Contact Us</h2>
+          <p> Contact us at <b>services@skezzo.com </b> any query or any doubt</p>
         </div>
       </div>
 
