--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title> SKEZZO | New style of mobility</title>
-  <meta content="" name="description">
+  <meta content="SKEZZO is now offering Terrain-Electric Skateboard with the best durability and super-fast speed with 6months minimum guarantee " name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
@@ -103,7 +103,7 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p></p>
         </div>
 
         <div class="row">
@@ -145,7 +145,7 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-start">
             <h3>Call To Action</h3>
-            <p> Our customer Support gives 24x7 service for every customer ,so, that your doubt can be resolved within few minutes </p>
+            <p> Our customer Support gives 24x7 service for every customer ,so, that your doubt can be resolved as soon as possible. </p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="#">Call To Action</a>
@@ -162,23 +162,23 @@
           <div class="col-lg-6 order-2 order-lg-1">
             <div class="icon-box mt-5 mt-lg-0">
               <i class="bx bx-receipt"></i>
-              <h4>Est labore ad</h4>
-              <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+              <h4>Scan and Use</h4>
+              <p>You can use SKEZZO boards by scanning qr given on that electric board from the charging station.</p>
             </div>
             <div class="icon-box mt-5">
               <i class="bx bx-cube-alt"></i>
-              <h4>Harum esse qui</h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+              <h4>Charging Stations</h4>
+              <p>You can take our boards from these charging stations and keep it back after use.</p>
             </div>
             <div class="icon-box mt-5">
               <i class="bx bx-images"></i>
-              <h4>Aut occaecati</h4>
-              <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+              <h4>Novality</h4>
+              <p> Our boards are Terrain-Electric Skateboards which will help you to ride anywhere (eg Roads, Ground) without any restriction.</p>
             </div>
             <div class="icon-box mt-5">
               <i class="bx bx-shield"></i>
-              <h4>Beatae veritatis</h4>
-              <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+              <h4>Protection</h4>
+              <p>As our main priority is user's safety, so with SKEZZO boards you will be given helmet and ankle protectors (Optional)</p>
             </div>
           </div>
           <div class="image col-lg-6 order-1 order-lg-2" style='background-image: url("assets/img/features.jpg");'></div>
