--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               <p>As our main priority is user's safety, so with SKEZZO boards you will be given helmet and ankle protectors (Optional)</p>
             </div>
           </div>
-          <div class="image col-lg-6 order-1 order-lg-2" style='background-image: url("assets/img/features.jpg");'></div>
+          <div class="image col-lg-6 order-1 order-lg-2" style='background-image: url("assets/img/Skezzo-bg-image.jpg");'></div>
         </div>
 
       </div>
