<Update started again>

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
               <div class="email" style="display:inline-block;width:30%;min-width:300px">
                 <i class="ri-mail-line"></i>
                 <h4>Email:</h4>
-                <p>services@skezzo.com</p>
+                <p>mail.skezzo@gmail.com</p>
               </div>
 
               <div class="phone" style="display:inline-block;width:30%;min-width:300px">
