<Team Skezzo update>

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
         &copy; Copyright <strong><span>SKEZZO</span></strong>. All Rights Reserved
       </div>
       <div class="credit">
-        Design by <a href="/">Team Skezzo</a>
+        Design by <a href="https://www.linkedin.com/in/aryan-sharma-77a98a216/">Team Skezzo</a>
       </div>
     </div>
   </footer><!-- End Footer -->
